--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,13 +9,12 @@ phases:
       - REPOSITORY_URI=034619683986.dkr.ecr.eu-west-3.amazonaws.com/elements-recorder-front
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
-      - echo $IMAGE_TAG
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -f Dockerfile-prod .
-      - docker tag $REPOSITORY_URI:$IMAGE_TAG
+      - docker build -t $REPOSITORY_URI:latest -f Dockerfile-prod .
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
       - echo Build completed on `date`
